app/k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: backend
  namespace: example
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    app: example-backend
